[package]
name = "VectorSpace"
version = "0.1.0"
authors = ["Jordan McIntyre <39545402+Staggier@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["image","mixer","static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2","sdl2-image[png,jpg]","sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "a0518036077baa4"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }