[package]
name = "VectorSpace"
version = "0.1.0"
authors = ["Jordan McIntyre <39545402+Staggier@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["ttf","image","mixer"]

[dependencies]
rand = "0.8"